--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cuid": "^3.0.0",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.9",
+    "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^2.1.4"
