--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.9",
     "react-dropzone": "^14.2.3",
+    "react-grid-gallery": "^1.0.0",
+    "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.9.0",
     "web-vitals": "^2.1.4"
