--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^4.6.0",
     "cuid": "^3.0.0",
     "react": "^18.2.0",
+    "react-awesome-lightbox": "^1.8.1",
+    "react-compare-image": "^3.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
