--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.21.1",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "cuid": "^3.0.0",
+    "dayjs": "^1.11.7",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
-    "react-awesome-lightbox": "^1.8.1",
     "react-compare-image": "^3.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -19,6 +21,7 @@
     "react-dropzone": "^14.2.3",
     "react-grid-gallery": "^1.0.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.9.0",
     "use-interval": "^1.4.0",
