--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.7",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-awesome-lightbox": "^1.8.1",
     "react-compare-image": "^3.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
