--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^4.6.0",
     "cuid": "^3.0.0",
     "dayjs": "^1.11.7",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-awesome-lightbox": "^1.8.1",
