--- a/docker/docker-compose-prod-build.yml
+++ b/docker/docker-compose-prod-build.yml
@@ -1,4 +1,4 @@
-# docker compose per lo sviluppo in locale
+# docker compose per fare il build prima del save dell'immagine
 version: "3.2"
 
 services:
@@ -7,15 +7,12 @@ services:
     restart: always
     image: backend:latest
     container_name: backend
-    # build:
-    #   context: ../backend/
-    #   dockerfile: Dockerfile
+    build:
+      context: ../backend/
+      dockerfile: Dockerfile
     volumes: 
       - ./backend/db.sqlite3:/app/backend/db.sqlite3
       - ./backend/uploads:/app/backend/myapp/uploads
-    # command senza gunicorn
-    # command: python manage.py runserver 0.0.0.0:8000
-    # command con gunicorn
     command: python manage.py migrate && gunicorn backend.wsgi --bind 0.0.0.0:8000
     ports:
       - "8000:8000"
@@ -32,7 +29,6 @@ services:
     image: celery:latest
     command: >
       celery -A backend.celery worker --pool=solo -l info
-    # aggiunto --uid=nobody --gid=nogroup per evitare warning di sicurezza 
     ports: []
 
   nginx:
@@ -44,7 +40,7 @@ services:
       dockerfile: ./nginx/prod/Dockerfile
     ports:
       - "80:80"
-      - "443:443"
+      - "443:443" 
     environment:
       CLIENT_MAX_BODY_SIZE: 40M
       GLOBAL_MAX_BODY_SIZE: 40M
@@ -52,22 +48,6 @@ services:
       - ./nginx/letsencrypt:/etc/letsencrypt
     networks:
       - net
-
-  # frontend:
-  #   restart: always
-  #   command: npm start
-  #   # command: /usr/local/lib/node_modules/serve -s build
-  #   container_name: frontend
-  #   build:
-  #     context: ./frontend/
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "3000:3000"
-  #   stdin_open: true
-  #   depends_on:
-  #     - backend
-  #   networks:
-  #     - net
 
   redis:
     restart: always
