fix-nginx production config

--- a/nginx/prod/nginx.conf
+++ b/nginx/prod/nginx.conf
@@ -1,13 +1,13 @@
 
+# disables emitting nginx version in error messages and in the “Server” response header field
 server_tokens               off;
+
 access_log                  /var/log/nginx/supersecure.access.log;
 error_log                   /var/log/nginx/supersecure.error.log;
 
-# This configuration will be changed to redirect to HTTPS later
 server {
   server_name               aitraining.ovh www.aitraining.ovh;
-
-  root /usr/share/nginx/html/;
+  root                      /usr/share/nginx/html/;
 
   location /api {
     proxy_pass              http://backend:8000/api;
@@ -34,32 +34,32 @@ server {
   }
 
   listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/aitraining.ovh/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/aitraining.ovh/privkey.pem; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/aitraining.ovh/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/aitraining.ovh/privkey.pem; # managed by Certbot
   include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 }
 
+# slides
 server {
   server_name           slides.aitraining.ovh www.slides.aitraining.ovh;
-
-  root /var/www/slides/;
+  root                  /var/www/slides/;
 
   location / {
      try_files $uri $uri/ /index.html =404;
   }
 
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/aitraining.ovh/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/aitraining.ovh/privkey.pem; # managed by Certbot
+  listen 443 ssl; # managed by Certbot
+  ssl_certificate /etc/letsencrypt/live/aitraining.ovh/fullchain.pem; # managed by Certbot
+  ssl_certificate_key /etc/letsencrypt/live/aitraining.ovh/privkey.pem; # managed by Certbot
   include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
 
 }
 
 
+# redirect http to https
 server {
   if ($host = www.aitraining.ovh) {
       return 301 https://$host$request_uri;
@@ -79,8 +79,8 @@ server {
       return 301 https://$host$request_uri;
   } # managed by Certbot
 
-  server_name               aitraining.ovh www.aitraining.ovh;
-  listen                    80;
+  server_name           aitraining.ovh www.aitraining.ovh;
+  listen                80;
     return 404; # managed by Certbot
 
 }
